// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Canonical On Demand Audio Page A11y I can see the skip to content link 1`] = `"Langsung ke konten"`;

exports[`Canonical On Demand Audio Page Analytics ATI tracking pixel excluding src 1`] = `"<img height="1px" width="1px" alt="" style="position:absolute" >"`;

exports[`Canonical On Demand Audio Page Analytics ATI tracking pixel hostname 1`] = `"https://logws1363.ati-host.net/hit.xiti"`;

exports[`Canonical On Demand Audio Page Analytics ATI tracking pixel search params 1`] = `
[
  {
    "s": "598343",
  },
  {
    "s2": "54",
  },
  {
    "p": "indonesia.bbc_indonesian_radio.w172ywztppc5xsy.page",
  },
  {
    "x1": "[urn:bbc:pips:w172ywztppc5xsy]",
  },
  {
    "x2": "[responsive]",
  },
  {
    "x3": "[news-indonesia]",
  },
  {
    "x4": "[id]",
  },
  {
    "x7": "[player-episode]",
  },
  {
    "x8": "[simorgh-nojs]",
  },
  {
    "x9": "[Dunia%20Pagi%20Ini%20-%20BBC%20News%20Indonesia]",
  },
]
`;

exports[`Canonical On Demand Audio Page Footer Anchors should match text and url 1`] = `
{
  "text": "BBC News, Indonesia",
  "url": "/indonesia",
}
`;

exports[`Canonical On Demand Audio Page Footer Anchors should match text and url 2`] = `
{
  "text": "Alasan Anda dapat mempercayai BBC News",
  "url": "https://www.bbc.com/indonesia/institutional-49283175",
}
`;

exports[`Canonical On Demand Audio Page Footer Anchors should match text and url 3`] = `
{
  "text": "Peraturan Penggunaan",
  "url": "https://www.bbc.com/indonesia/institutional-37818421",
}
`;

exports[`Canonical On Demand Audio Page Footer Anchors should match text and url 4`] = `
{
  "text": "Mengenai BBC",
  "url": "https://www.bbc.com/indonesia/institutional-37818424",
}
`;

exports[`Canonical On Demand Audio Page Footer Anchors should match text and url 5`] = `
{
  "text": "Kebijakan tentang Privasi",
  "url": "https://www.bbc.com/indonesia/institutional-37818425",
}
`;

exports[`Canonical On Demand Audio Page Footer Anchors should match text and url 6`] = `
{
  "text": "Cookies",
  "url": "https://www.bbc.com/usingthebbc/cookies/",
}
`;

exports[`Canonical On Demand Audio Page Footer Anchors should match text and url 7`] = `
{
  "text": "Hubungi BBC",
  "url": "https://www.bbc.co.uk/indonesia/send/u50853401",
}
`;

exports[`Canonical On Demand Audio Page Footer Anchors should match text and url 8`] = `
{
  "text": "BC News dalam bahasa-bahasa lain",
  "url": "https://www.bbc.com/ws/languages",
}
`;

exports[`Canonical On Demand Audio Page Footer Anchors should match text and url 9`] = `
{
  "text": "Baca tentang peraturan baru terkait link eksternal.",
  "url": "https://www.bbc.com/indonesia/institutional/2011/02/000001_links",
}
`;

exports[`Canonical On Demand Audio Page Footer I can click on the BBC branding and it would take me to the homepage 1`] = `"/indonesia"`;

exports[`Canonical On Demand Audio Page Footer Paragraphs should match text 1`] = `"© 2025 BBC. BBC tidak bertanggung jawab atas konten dari situs eksternal. Baca tentang peraturan baru terkait link eksternal."`;

exports[`Canonical On Demand Audio Page Header I can see the branding 1`] = `
{
  "brandLink": "BBC News, Indonesia",
  "svg": <path
    d="M759.927 265.75a4646.67 4646.67 0 00-23.49-37.242 2633.129 2633.129 0 00-23.49-36.2v73.442h-22.003V159.452h23.193a2668.556 2668.556 0 0123.713 36.052 2774.159 2774.159 0 0123.266 36.647v-72.699h22.003V265.75h-23.192zM804.186 159.452h73.145v19.03h-50.25v23.044h44.6v19.029h-44.6v26.166h53.075v19.03h-75.97V159.451zM982.1 265.75a3174.441 3174.441 0 01-9.886-35.978 3159.855 3159.855 0 01-9.441-35.977 2391.54 2391.54 0 01-9.218 35.977 2452.296 2452.296 0 01-9.811 35.978H919.51a2032.839 2032.839 0 01-14.57-52.628c-4.659-17.74-9.068-35.63-13.23-53.67h24.976a2003.215 2003.215 0 007.88 41.33 1444.404 1444.404 0 008.77 40.586 3259.894 3259.894 0 0018.882-77.456h22.3a3251.95 3251.95 0 0018.732 75.821 1999.976 1999.976 0 008.623-39.843 1455.41 1455.41 0 007.73-40.438h24.531a1845.28 1845.28 0 01-13.231 53.67 2041.61 2041.61 0 01-14.57 52.628H982.1zM1077.47 267.98c-5.849 0-11.621-.645-17.32-1.932a66.227 66.227 0 01-16.427-6.096v-20.516c10.604 6.444 21.854 9.663 33.747 9.663 6.74 0 11.868-1.138 15.387-3.419 3.517-2.28 5.278-5.45 5.278-9.515 0-3.07-.868-5.475-2.601-7.21-1.736-1.733-4.04-3.122-6.914-4.163-2.875-1.04-6.095-2.007-9.663-2.899-5.849-1.387-11.002-2.974-15.462-4.757-4.46-1.784-8.228-3.889-11.298-6.319-3.073-2.427-5.404-5.352-6.988-8.771-1.586-3.42-2.379-7.508-2.379-12.265 0-6.74 1.71-12.537 5.13-17.395 3.419-4.855 8.25-8.597 14.495-11.225 6.244-2.624 13.677-3.939 22.3-3.939 5.65 0 11.2.646 16.651 1.933 5.45 1.289 10.356 3.024 14.718 5.203v20.22c-4.362-2.677-9.292-4.758-14.792-6.245-5.501-1.487-11.027-2.23-16.577-2.23-6.047 0-10.73 1.04-14.049 3.122-3.322 2.081-4.98 5.055-4.98 8.92 0 2.776.791 4.98 2.378 6.616 1.584 1.635 3.84 2.973 6.765 4.014 2.922 1.04 6.367 2.058 10.332 3.047 5.055 1.29 9.761 2.702 14.124 4.238 4.36 1.537 8.2 3.493 11.521 5.872 3.32 2.379 5.896 5.403 7.731 9.069 1.833 3.668 2.75 8.177 2.75 13.529 0 7.038-1.735 13.06-5.203 18.063-3.47 5.006-8.474 8.823-15.015 11.447-6.542 2.626-14.421 3.94-23.639 3.94z"
  />,
}
`;

exports[`Canonical On Demand Audio Page Header Navigation link should match text and url 1`] = `
{
  "text": "Berita",
  "url": "/indonesia",
}
`;

exports[`Canonical On Demand Audio Page Header Navigation link should match text and url 2`] = `
{
  "text": "Indonesia",
  "url": "/indonesia/topics/cjgn7k8yx4gt",
}
`;

exports[`Canonical On Demand Audio Page Header Navigation link should match text and url 3`] = `
{
  "text": "Dunia",
  "url": "/indonesia/topics/cyz8evpl224t",
}
`;

exports[`Canonical On Demand Audio Page Header Navigation link should match text and url 4`] = `
{
  "text": "Viral",
  "url": "/indonesia/topics/cn5w7g2nq6dt",
}
`;

exports[`Canonical On Demand Audio Page Header Navigation link should match text and url 5`] = `
{
  "text": "Liputan Mendalam",
  "url": "/indonesia/topics/cw9qgeqd18zt",
}
`;

exports[`Canonical On Demand Audio Page Header Navigation link should match text and url 6`] = `
{
  "text": "Majalah",
  "url": "/indonesia/topics/cpxrqmrkeg8t",
}
`;

exports[`Canonical On Demand Audio Page I can see the brand title 1`] = `"Dunia Pagi Ini"`;

exports[`Canonical On Demand Audio Page I can see the episode summary 1`] = `"Berita terbaru dari seluruh dunia dan ulasan peristiwa dari Indonesia."`;

exports[`Canonical On Demand Audio Page I can see the episode title 1`] = `"Dunia Pagi Ini"`;

exports[`Canonical On Demand Audio Page I can see the hero image 1`] = `"https://ichef.bbci.co.uk/images/ic/256x256/p08b4828.png.webp"`;

exports[`Canonical On Demand Audio Page Main heading should match text 1`] = `"Dunia Pagi Ini, Dunia Pagi Ini"`;

exports[`Canonical On Demand Audio Page Media Loader renders a valid container 1`] = `
<figure
  class="media-container bbc-16wwgxo"
  data-e2e="media-loader__container"
>
  <div
    class="media-player bbc-1ty1x88"
    data-e2e="media-player"
  >
    <noscript>
      <div>
        <div
          class="bbc-1mgo2mg"
        >
          <strong
            class="bbc-pow7hy"
          >
            Untuk memutar video ini, aktifkan JavaScript atau coba di mesin pencari lain
          </strong>
        </div>
      </div>
    </noscript>
  </div>
</figure>
`;

exports[`Canonical On Demand Audio Page Recent Episodes List items should match text and url 1`] = `
{
  "text": "Audio, Dunia Pagi Ini, Dunia Pagi Ini,  Durasi 15,30  Durasi 15:3022 Januari 2023",
  "url": "/indonesia/bbc_indonesian_radio/w172ywztppckjfb",
}
`;

exports[`Canonical On Demand Audio Page Recent Episodes List items should match text and url 2`] = `
{
  "text": "Audio, Dunia Pagi Ini, Dunia Pagi Ini,  Durasi 15,30  Durasi 15:3022 Januari 2023",
  "url": "/indonesia/bbc_indonesian_radio/w172ywztppckdp6",
}
`;

exports[`Canonical On Demand Audio Page Recent Episodes List items should match text and url 3`] = `
{
  "text": "Audio, Dunia Pagi Ini, Dunia Pagi Ini,  Durasi 15,30  Durasi 15:3019 Januari 2023",
  "url": "/indonesia/bbc_indonesian_radio/w172ywztppc8tq1",
}
`;

exports[`Canonical On Demand Audio Page Recent Episodes List items should match text and url 4`] = `
{
  "text": "Audio, Dunia Pagi Ini, Dunia Pagi Ini,  Durasi 15,30  Durasi 15:3019 Januari 2023",
  "url": "/indonesia/bbc_indonesian_radio/w172ywztppc8pyx",
}
`;

exports[`Canonical On Demand Audio Page SEO Apple Touch Icon should match attributes 1`] = `
{
  "sizes": null,
  "url": "http://localhost:7080/indonesia/images/icons/icon-192x192.png",
}
`;

exports[`Canonical On Demand Audio Page SEO Apple Touch Icon should match attributes 2`] = `
{
  "sizes": "72x72",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/indonesia/images/icons/icon-72x72.png",
}
`;

exports[`Canonical On Demand Audio Page SEO Apple Touch Icon should match attributes 3`] = `
{
  "sizes": "96x96",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/indonesia/images/icons/icon-96x96.png",
}
`;

exports[`Canonical On Demand Audio Page SEO Apple Touch Icon should match attributes 4`] = `
{
  "sizes": "128x128",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/indonesia/images/icons/icon-128x128.png",
}
`;

exports[`Canonical On Demand Audio Page SEO Apple Touch Icon should match attributes 5`] = `
{
  "sizes": "144x144",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/indonesia/images/icons/icon-144x144.png",
}
`;

exports[`Canonical On Demand Audio Page SEO Apple Touch Icon should match attributes 6`] = `
{
  "sizes": "152x152",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/indonesia/images/icons/icon-152x152.png",
}
`;

exports[`Canonical On Demand Audio Page SEO Apple Touch Icon should match attributes 7`] = `
{
  "sizes": "180x180",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/indonesia/images/icons/icon-180x180.png",
}
`;

exports[`Canonical On Demand Audio Page SEO Apple Touch Icon should match attributes 8`] = `
{
  "sizes": "192x192",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/indonesia/images/icons/icon-192x192.png",
}
`;

exports[`Canonical On Demand Audio Page SEO Apple Touch Icon should match attributes 9`] = `
{
  "sizes": "384x384",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/indonesia/images/icons/icon-384x384.png",
}
`;

exports[`Canonical On Demand Audio Page SEO Apple Touch Icon should match attributes 10`] = `
{
  "sizes": "512x512",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/indonesia/images/icons/icon-512x512.png",
}
`;

exports[`Canonical On Demand Audio Page SEO Canonical link 1`] = `"http://localhost:7080/indonesia/bbc_indonesian_radio/w172ywztppc5xsy"`;

exports[`Canonical On Demand Audio Page SEO Dir attribute 1`] = `"ltr"`;

exports[`Canonical On Demand Audio Page SEO FB app ID 1`] = `"1609039196070050"`;

exports[`Canonical On Demand Audio Page SEO Heading level 1 1`] = `"Dunia Pagi Ini, Dunia Pagi Ini"`;

exports[`Canonical On Demand Audio Page SEO Lang attribute 1`] = `"id"`;

exports[`Canonical On Demand Audio Page SEO Linked data should match text 1`] = `
{
  "@context": "http://schema.org",
  "@graph": [
    {
      "@type": "WebPage",
      "image": {
        "@type": "ImageObject",
        "height": 576,
        "url": "https://news.files.bbci.co.uk/ws/img/logos/og/indonesia.png",
        "width": 1024,
      },
      "inLanguage": {
        "@type": "Language",
        "alternateName": "id",
        "name": "Indonesian",
      },
      "mainEntityOfPage": {
        "@id": "http://localhost:7080/indonesia/bbc_indonesian_radio/w172ywztppc5xsy",
        "@type": "WebPage",
        "name": "Dunia Pagi Ini - Dunia Pagi Ini - Indonesia",
      },
      "publisher": {
        "@type": "NewsMediaOrganization",
        "logo": {
          "@type": "ImageObject",
          "height": 576,
          "url": "https://news.files.bbci.co.uk/ws/img/logos/og/indonesia.png",
          "width": 1024,
        },
        "name": "BBC News Indonesia",
        "publishingPrinciples": "https://www.bbc.com/indonesia/institutional-49283175",
      },
      "thumbnailUrl": "https://news.files.bbci.co.uk/ws/img/logos/og/indonesia.png",
      "url": "http://localhost:7080/indonesia/bbc_indonesian_radio/w172ywztppc5xsy",
    },
    {
      "@type": "AudioObject",
      "description": "Berita terbaru dari seluruh dunia dan ulasan peristiwa dari Indonesia.",
      "duration": "PT15M30S",
      "name": "Dunia Pagi Ini",
      "thumbnailUrl": "https://ichef.bbci.co.uk/images/ic/1024x576/p08b4828.png",
      "uploadDate": "2023-01-18T00:00:00.000Z",
    },
  ],
}
`;

exports[`Canonical On Demand Audio Page SEO OG description 1`] = `"Berita terbaru dari seluruh dunia dan ulasan peristiwa dari Indonesia."`;

exports[`Canonical On Demand Audio Page SEO OG image 1`] = `"https://ichef.bbci.co.uk/images/ic/400x400/p08b4828.png"`;

exports[`Canonical On Demand Audio Page SEO OG image alt 1`] = `"BBC News Indonesia"`;

exports[`Canonical On Demand Audio Page SEO OG locale 1`] = `"id-ID"`;

exports[`Canonical On Demand Audio Page SEO OG site name 1`] = `"BBC News Indonesia"`;

exports[`Canonical On Demand Audio Page SEO OG title 1`] = `"Dunia Pagi Ini - Dunia Pagi Ini - Indonesia - BBC News Indonesia"`;

exports[`Canonical On Demand Audio Page SEO OG type 1`] = `"website"`;

exports[`Canonical On Demand Audio Page SEO OG url 1`] = `"http://localhost:7080/indonesia/bbc_indonesian_radio/w172ywztppc5xsy"`;

exports[`Canonical On Demand Audio Page SEO Page title 1`] = `"Dunia Pagi Ini - Dunia Pagi Ini - Indonesia - BBC News Indonesia"`;

exports[`Canonical On Demand Audio Page SEO Robots meta tag 1`] = `"noodp, noydir, max-image-preview:large"`;

exports[`Canonical On Demand Audio Page SEO Twitter card 1`] = `"summary_large_image"`;

exports[`Canonical On Demand Audio Page SEO Twitter creator 1`] = `"@bbcindonesia"`;

exports[`Canonical On Demand Audio Page SEO Twitter description 1`] = `"Berita terbaru dari seluruh dunia dan ulasan peristiwa dari Indonesia."`;

exports[`Canonical On Demand Audio Page SEO Twitter image alt 1`] = `"BBC News Indonesia"`;

exports[`Canonical On Demand Audio Page SEO Twitter image src 1`] = `"https://ichef.bbci.co.uk/images/ic/400x400/p08b4828.png"`;

exports[`Canonical On Demand Audio Page SEO Twitter site 1`] = `"@bbcindonesia"`;

exports[`Canonical On Demand Audio Page SEO Twitter title 1`] = `"Dunia Pagi Ini - Dunia Pagi Ini - Indonesia - BBC News Indonesia"`;

exports[`Canonical On Demand Audio Page a11y Assistive technology reads the brand and episode title as the headline 1`] = `"Dunia Pagi Ini, Dunia Pagi Ini"`;
